[gd_scene load_steps=27 format=2]

[ext_resource path="res://ScreenStretch.tscn" type="PackedScene" id=1]
[ext_resource path="res://CheatCodes.gd" type="Script" id=2]
[ext_resource path="res://ThemeEpisode.tres" type="Theme" id=3]
[ext_resource path="res://SettingsBool.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/cheat_0_1.png" type="Texture" id=5]
[ext_resource path="res://images/cheat_3_0.png" type="Texture" id=6]
[ext_resource path="res://images/cheat_1_1.png" type="Texture" id=7]
[ext_resource path="res://images/cheat_arcade.png" type="Texture" id=8]
[ext_resource path="res://images/cheat_3_1.png" type="Texture" id=9]
[ext_resource path="res://images/cheat_1_0.png" type="Texture" id=10]
[ext_resource path="res://images/cheat_modal.png" type="Texture" id=11]
[ext_resource path="res://images/cheat_0_0.png" type="Texture" id=12]
[ext_resource path="res://images/cheat_2_0.png" type="Texture" id=13]
[ext_resource path="res://images/cheat_bg.png" type="Texture" id=14]
[ext_resource path="res://images/cheat_2_1.png" type="Texture" id=15]
[ext_resource path="res://images/cheat_buttons.png" type="Texture" id=16]
[ext_resource path="res://BackButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://fonts/title_normal.tres" type="DynamicFont" id=18]
[ext_resource path="res://images/bg3.png" type="Texture" id=19]
[ext_resource path="res://ThemeSignupBox.theme" type="Theme" id=20]
[ext_resource path="res://fonts/small_bold.tres" type="DynamicFont" id=21]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -256, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "loop"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -128, 0 ), Vector2( 0, -128 ) ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 5 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 15 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("ScreenStretch/CheatCodePad/CheatArcade/Screen")

[sub_resource type="CircleShape2D" id=5]
radius = 64.0

[node name="CheatCodes" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.282353, 0.0156863, 0.380392, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ScreenStretch" parent="." instance=ExtResource( 1 )]

[node name="CheatCodePad" type="ColorRect" parent="ScreenStretch"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
rect_clip_content = true

[node name="Bg" type="TextureRect" parent="ScreenStretch/CheatCodePad"]
margin_left = -513.0
margin_top = -584.0
margin_right = 1287.0
margin_bottom = 816.0
texture = ExtResource( 19 )

[node name="CheatArcade" type="Sprite" parent="ScreenStretch/CheatCodePad"]
position = Vector2( 800, -128 )
texture = ExtResource( 8 )
centered = false

[node name="btn0" type="Sprite" parent="ScreenStretch/CheatCodePad/CheatArcade"]
position = Vector2( 388, 656 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 2

[node name="btn1" type="Sprite" parent="ScreenStretch/CheatCodePad/CheatArcade"]
position = Vector2( 260, 699 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 2
frame = 1

[node name="btn2" type="Sprite" parent="ScreenStretch/CheatCodePad/CheatArcade"]
position = Vector2( 468, 757 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 2
frame = 2

[node name="btn3" type="Sprite" parent="ScreenStretch/CheatCodePad/CheatArcade"]
position = Vector2( 338, 802 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 2
frame = 3

[node name="Screen" type="Viewport" parent="ScreenStretch/CheatCodePad/CheatArcade"]
size = Vector2( 256, 128 )

[node name="BG" type="TextureRect" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen"]
margin_left = -256.0
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 14 )
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/BG"]
autoplay = "loop"
anims/RESET = SubResource( 1 )
anims/loop = SubResource( 2 )

[node name="CheatModal" type="Sprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/BG"]
position = Vector2( 768.603, 163.397 )
texture = ExtResource( 11 )

[node name="TextBox" type="Sprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen"]
position = Vector2( 128, 88 )
texture = ExtResource( 11 )

[node name="Code" type="Node2D" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/TextBox"]
position = Vector2( -128, -56 )

[node name="S0" type="AnimatedSprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/TextBox/Code"]
frames = SubResource( 3 )
playing = true
centered = false
offset = Vector2( 64, 52 )

[node name="S1" type="AnimatedSprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/TextBox/Code"]
frames = SubResource( 3 )
playing = true
centered = false
offset = Vector2( 80, 52 )

[node name="S2" type="AnimatedSprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/TextBox/Code"]
frames = SubResource( 3 )
playing = true
centered = false
offset = Vector2( 96, 52 )

[node name="S3" type="AnimatedSprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/TextBox/Code"]
frames = SubResource( 3 )
playing = true
centered = false
offset = Vector2( 112, 52 )

[node name="S4" type="AnimatedSprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/TextBox/Code"]
frames = SubResource( 3 )
playing = true
centered = false
offset = Vector2( 128, 52 )

[node name="S5" type="AnimatedSprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/TextBox/Code"]
frames = SubResource( 3 )
playing = true
centered = false
offset = Vector2( 144, 52 )

[node name="S6" type="AnimatedSprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/TextBox/Code"]
frames = SubResource( 3 )
playing = true
centered = false
offset = Vector2( 160, 52 )

[node name="S7" type="AnimatedSprite" parent="ScreenStretch/CheatCodePad/CheatArcade/Screen/TextBox/Code"]
frames = SubResource( 3 )
playing = true
centered = false
offset = Vector2( 176, 52 )

[node name="TextureRect" type="TextureRect" parent="ScreenStretch/CheatCodePad/CheatArcade"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1144.0
margin_bottom = 592.0
texture = SubResource( 4 )
expand = true
flip_v = true

[node name="RetryTimer" type="Timer" parent="ScreenStretch/CheatCodePad"]
wait_time = 0.5
one_shot = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="ScreenStretch/CheatCodePad"]
position = Vector2( 709, 427 )
shape = SubResource( 5 )
shape_centered = false

[node name="TouchScreenButton2" type="TouchScreenButton" parent="ScreenStretch/CheatCodePad"]
position = Vector2( 580, 470 )
shape = SubResource( 5 )
shape_centered = false

[node name="TouchScreenButton3" type="TouchScreenButton" parent="ScreenStretch/CheatCodePad"]
position = Vector2( 788, 528 )
shape = SubResource( 5 )
shape_centered = false

[node name="TouchScreenButton4" type="TouchScreenButton" parent="ScreenStretch/CheatCodePad"]
position = Vector2( 658, 573 )
shape = SubResource( 5 )
shape_centered = false

[node name="TouchScreenButton5" type="TouchScreenButton" parent="ScreenStretch/CheatCodePad"]
position = Vector2( 422, 417 )
shape = SubResource( 5 )
shape_centered = false

[node name="CheatGet" type="Panel" parent="ScreenStretch/CheatCodePad"]
margin_left = 6.0
margin_top = 6.0
margin_right = 518.0
margin_bottom = 102.0
rect_min_size = Vector2( 512, 96 )
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 57, -64 )
theme = ExtResource( 20 )

[node name="Tween" type="Tween" parent="ScreenStretch/CheatCodePad/CheatGet"]

[node name="name" type="Label" parent="ScreenStretch/CheatCodePad/CheatGet"]
margin_left = 8.0
margin_top = 1.0
margin_right = 503.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 21 )
text = "Name of cheat code"

[node name="desc" type="Label" parent="ScreenStretch/CheatCodePad/CheatGet"]
margin_left = 8.0
margin_top = 34.0
margin_right = 503.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
text = "Description of cheat code
hthththtn"
autowrap = true
clip_text = true

[node name="CheatCodeList" type="ColorRect" parent="ScreenStretch"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
rect_clip_content = true
color = Color( 0, 0, 0, 0.752941 )

[node name="Scroll" type="ScrollContainer" parent="ScreenStretch/CheatCodeList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -296.0
margin_right = 576.0
margin_bottom = 296.0
theme = ExtResource( 3 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenStretch/CheatCodeList/Scroll"]
margin_right = 736.0
margin_bottom = 120.0
size_flags_horizontal = 3
alignment = 2

[node name="TopSpacer" type="Control" parent="ScreenStretch/CheatCodeList/Scroll/VBoxContainer"]
margin_right = 736.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )

[node name="Bool" parent="ScreenStretch/CheatCodeList/Scroll/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 20.0
margin_bottom = 100.0

[node name="BottomSpacer" type="Control" parent="ScreenStretch/CheatCodeList/Scroll/VBoxContainer"]
margin_top = 104.0
margin_right = 736.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 16 )

[node name="Details" type="Panel" parent="ScreenStretch/CheatCodeList"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -168.0
margin_right = 448.0
margin_bottom = 168.0
theme = ExtResource( 3 )

[node name="V" type="VBoxContainer" parent="ScreenStretch/CheatCodeList/Details"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Name" type="Label" parent="ScreenStretch/CheatCodeList/Details/V"]
margin_right = 368.0
margin_bottom = 44.0
autowrap = true

[node name="Desc" type="RichTextLabel" parent="ScreenStretch/CheatCodeList/Details/V"]
margin_top = 48.0
margin_right = 368.0
margin_bottom = 76.0
mouse_filter = 2
theme = ExtResource( 3 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScreenStretch/CheatCodeList"]
margin_left = 200.0
margin_right = 338.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 18 )
text = "Cheat codes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="ScreenStretch/CheatCodeList" instance=ExtResource( 17 )]

[node name="Tween" type="Tween" parent="ScreenStretch"]

[connection signal="timeout" from="ScreenStretch/CheatCodePad/RetryTimer" to="." method="_on_RetryTimer_timeout"]
[connection signal="pressed" from="ScreenStretch/CheatCodePad/TouchScreenButton" to="." method="_on_cheat_button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="ScreenStretch/CheatCodePad/TouchScreenButton2" to="." method="_on_cheat_button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="ScreenStretch/CheatCodePad/TouchScreenButton3" to="." method="_on_cheat_button_pressed" binds= [ 2 ]]
[connection signal="pressed" from="ScreenStretch/CheatCodePad/TouchScreenButton4" to="." method="_on_cheat_button_pressed" binds= [ 3 ]]
[connection signal="pressed" from="ScreenStretch/CheatCodePad/TouchScreenButton5" to="." method="_paginate" binds= [ false ]]
[connection signal="gui_input" from="ScreenStretch/CheatCodeList/Details" to="." method="_on_Details_gui_input"]
[connection signal="back_pressed" from="ScreenStretch/CheatCodeList/BackButton" to="." method="_back_to_title"]
